--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".AddReminderActivity">
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
@@ -20,8 +23,7 @@
         </activity>
         <activity
             android:name=".SignupActivity"
-            android:label="signup">
-        </activity>
+            android:label="signup"></activity>
     </application>
 
 </manifest>
