--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.hallo">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/app_logo"
@@ -11,9 +12,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".AddReminderActivity">
-        </activity>
-        <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
@@ -21,6 +19,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".TwoFAActivity">
+        </activity>
+        <activity
+            android:name=".AddReminderActivity">
         </activity>
         <activity
             android:name=".SignupActivity"
